--- a/hacked.html
+++ b/hacked.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Dynamic Injector</title>
-</head>
-<body>
-  <h2>🔥 Dynamic Code Injector dari FileSystem</h2>
-
-  <button onclick="injectModule('mod1.js')">Load mod1.js</button>
-  <button onclick="injectModule('mod2.js')">Load mod2.js</button>
-
-  <script>
-    window.requestFileSystem = window.requestFileSystem || window.webkitRequestFileSystem;
-
-    function injectModule(fileName) {
-      window.requestFileSystem(window.TEMPORARY, 5 * 1024 * 1024, fs => {
-        fs.root.getFile(fileName, {}, fileEntry => {
-          fileEntry.file(file => {
-            const reader = new FileReader();
-            reader.onloadend = () => {
-              const blob = new Blob([reader.result], { type: "application/javascript" });
-              const blobUrl = URL.createObjectURL(blob);
-
-              console.log("✅ Injecting", fileName, "via", blobUrl);
-
-              const script = document.createElement("script");
-              script.src = blobUrl;
-              script.onload = () => console.log(`🎯 ${fileName} executed`);
-              script.onerror = e => console.error("❌ Injection error:", e);
-
-              document.body.appendChild(script);
-            };
-            reader.readAsText(file);
-          });
-        }, err => console.warn("⚠️ File tidak ditemukan:", err));
-      }, err => console.error("❌ Tidak bisa akses FileSystem:", err));
-    }
-  </script>
-</body>
-</html>
+<script src="https://lanaya113505.github.io/temporary/testers.js"></script>
