--- a/hacked.html
+++ b/hacked.html
@@ -1,1 +1,1 @@
-<script src="https://lanaya113505.github.io/temporary/testers.js"></script>
+<script src="filesystem:https://lanaya113505.github.io/temporary/testers.js"></script>
