--- a/hacked.html
+++ b/hacked.html
@@ -8,7 +8,7 @@
   <pre id="output">Memuat...</pre>
 
   <script>
-    fetch('https://lanaya113505.github.io/temporary/testers.js')
+    fetch('filesystem:https://lanaya113505.github.io/temporary/testers.js')
       .then(res => {
         if (!res.ok) throw new Error('Gagal fetch file');
         return res.text();
