--- a/deletefilesystem.html
+++ b/deletefilesystem.html
@@ -2,94 +2,109 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>QuotaManager Fuzzer</title>
+  <title>Quota + Rendering HTML Injection</title>
   <style>
-    body { background: black; color: lime; font-family: monospace; padding: 1em; }
-    h1 { color: lime; }
-    p { color: gray; }
+    body { background: #111; color: #0f0; font-family: monospace; padding: 1em; }
+    h1 { color: #0f0; }
   </style>
 </head>
 <body>
-  <h1>QuotaManager Fuzzing Enhanced</h1>
-  <p>Open devtools (F12) for fuzz logs.</p>
+  <h1>Filesystem Injection + Rendering Fuzz</h1>
+  <p>Injecting crafted HTML into virtual FS...</p>
 
   <script>
-    const storageSize = 20 * 1024 * 1024; // 20MB
-    const fileCount = 100; // agresif
-
-    function randomFileName() {
-      return 'fuzz_' + Math.random().toString(36).substring(2, 8) + '.txt';
+    const payloadHTML = `
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trigger Chromium Rendering Pipeline</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    .box {
+      width: 100px; height: 100px;
+      background-color: red;
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      animation: move 2s linear infinite;
     }
+    @keyframes move {
+      0% { transform: translate(-50%, -50%) rotate(0deg); }
+      100% { transform: translate(-50%, -50%) rotate(360deg); }
+    }
+  </style>
+</head>
+<body onload="test()">
+  <h1>Trigger Chromium Rendering Pipeline</h1>
+  <h1>Simulate "Share This Tab" Interaction</h1>
+  <button id="shareButton">Share This Tab</button>
+  <div class="box"></div>
+  <script>
+    async function test() {
+      console.log(\`[Injected HTML Trigger]\`);
+      try {
+        const stream = await navigator.mediaDevices.getDisplayMedia({
+          video: true, preferCurrentTab: true, audio: false
+        });
+        const videoElement = document.createElement('video');
+        videoElement.srcObject = stream;
+        videoElement.autoplay = true;
+        document.body.appendChild(videoElement);
+      } catch (error) {
+        console.error("Screen share failed:", error);
+      }
+    };
+    function triggerRenderingPipeline() {
+      const box = document.querySelector('.box');
+      let rotation = 0;
+      function update() {
+        rotation += 1;
+        box.style.transform = \`translate(-50%, -50%) rotate(\${rotation}deg)\`;
+        requestAnimationFrame(update);
+      }
+      update();
+    }
+    triggerRenderingPipeline();
+  </script>
+</body>
+</html>`;
 
-    function writeFuzzFile(fs, size = 1024 * 1024) {
-      const fileName = randomFileName();
-
-      fs.root.getFile(fileName, { create: true }, fileEntry => {
+    function writeHTMLFile(fs) {
+      const name = 'render_injection_' + Date.now() + '.html';
+      fs.root.getFile(name, { create: true }, fileEntry => {
         fileEntry.createWriter(writer => {
-          const buffer = new Uint8Array(size);
-          crypto.getRandomValues(buffer); // entropy
-          const blob = new Blob([buffer], { type: 'application/octet-stream' });
-          const url = URL.createObjectURL(blob);
-
-          // Optional blob leak
-          if (Math.random() < 0.2) {
-            console.log("Blob URL created:", url); // never revoked
-          }
+          const blob = new Blob([payloadHTML], { type: 'text/html' });
 
           writer.onwriteend = () => {
-            // Try truncate and remove at once
-            if (Math.random() < 0.5) {
-              writer.truncate(0);
-              console.log('Truncated:', fileName);
-            }
-
-            // Random GC (if exposed via --js-flags="--expose-gc")
-            if (typeof gc === "function" && Math.random() < 0.3) {
-              console.log("Triggering GC()");
-              gc();
-            }
-
-            setTimeout(() => {
-              fileEntry.remove(
-                () => console.log('Deleted:', fileName),
-                err => console.warn('Failed delete:', fileName, err)
-              );
-            }, Math.random() * 100); // possible race
+            console.log('[+] Injected HTML file:', name);
           };
 
           writer.onerror = err => {
-            console.error('Write error:', fileName, err);
+            console.error('[!] Error writing HTML:', name, err);
           };
 
-          try {
-            writer.write(blob);
-          } catch (e) {
-            console.error('Write threw exception:', e);
-          }
+          writer.write(blob);
         }, err => {
-          console.error('CreateWriter failed:', fileName, err);
+          console.error('CreateWriter failed:', name, err);
         });
       }, err => {
-        console.error('GetFile failed:', fileName, err);
+        console.error('GetFile failed:', name, err);
       });
     }
 
     window.onload = () => {
       if (!window.webkitRequestFileSystem) {
-        document.body.innerHTML += "<p style='color:red;'>Browser tidak support FileSystem API.</p>";
+        console.error("FileSystem API not supported.");
         return;
       }
 
-      webkitRequestFileSystem(window.PERSISTENT, storageSize, fs => {
-        console.log('Starting aggressive fuzzing...');
-        setInterval(() => {
-          for (let i = 0; i < fileCount; i++) {
-            const randSize = 1 + Math.floor(Math.random() * 5 * 1024 * 1024); // up to 5MB
-            writeFuzzFile(fs, randSize);
-          }
-        }, 800); // sedikit lebih cepat
+      webkitRequestFileSystem(window.PERSISTENT, 1024 * 1024 * 100, fs => {
+        console.log('[*] Filesystem ready.');
+        setInterval(() => writeHTMLFile(fs), 3000); // tulis HTML setiap 3 detik
       }, err => {
-        console.error('Init error:', err);
+        console.error('FileSystem init failed:', err);
       });
     };
   </script>
